--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,62 +1,17 @@
-[tool.poetry]
-name = "mats_sae_training"
-version = "0.1.0"
-description = "Training Sparse Autoencoders (SAEs)"
-authors = ["Joseph Bloom"]
-readme = "README.md"
-packages = [{include = "sae_analysis"}, {include = "sae_training"}]
-
-[tool.poetry.dependencies]
-python = "^3.10"
-transformer-lens = "^1.14.0"
-transformers = "^4.38.1"
-jupyter = "^1.0.0"
-plotly = "^5.19.0"
-plotly-express = "^0.4.1"
-nbformat = "^5.9.2"
-ipykernel = "^6.29.2"
-matplotlib = "^3.8.3"
-matplotlib-inline = "^0.1.6"
-eindex = {git = "https://github.com/callummcdougall/eindex.git"}
-datasets = "^2.17.1"
-babe = "^0.0.7"
-nltk = "^3.8.1"
-sae-vis = {git = "https://github.com/callummcdougall/sae_vis.git", rev = "4bcef489b644dd3357b1975f3245d534f6f0d2e0"}
-mkdocs = "^1.5.3"
-mkdocs-material = "^9.5.15"
-mkdocs-autorefs = "^1.0.1"
-mkdocs-section-index = "^0.3.8"
-mkdocstrings = "^0.24.1"
-mkdocstrings-python = "^1.9.0"
-
-
-[tool.poetry.group.dev.dependencies]
-black = "^24.2.0"
-pytest = "^8.0.2"
-pytest-cov = "^4.1.0"
-pre-commit = "^3.6.2"
-flake8 = "^7.0.0"
-isort = "^5.13.2"
-pyright = "^1.1.351"
-
-[tool.isort]
-profile = "black"
-
-[tool.pyright]
-exclude = ["./sae_training/geom_median/"]
-
-typeCheckingMode = "strict"
-reportMissingTypeStubs = "none"
-reportUnknownMemberType = "none"
-reportUnknownArgumentType = "none"
-reportUnknownVariableType = "none"
-reportUntypedFunctionDecorator = "none"
-reportUnnecessaryIsInstance = "none"
-reportUnnecessaryComparison = "none"
-reportConstantRedefinition = "none"
-reportUnknownLambdaType = "none"
-reportPrivateUsage = "none"
-
 [build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+requires = ["setuptools"]
+build-backend = "setuptools.build_meta"
+
+[project]
+name = "mats_sae_training"
+version = "0.0.1"
+dependencies = [
+    "requests",
+    'importlib-metadata; python_version>"3.10"',
+]
+
+[tool.setuptools.packages.find]
+# All the following settings are optional:
+where = ["."]  # ["."] by default
+include = ["sae_training","sae_analysis"]  # ["*"] by default
+namespaces = false  # true by default
